examples/invalid_modules/duplicate_global_symbol/src/shared/beta.argx
module shared.beta

type Ping { content: string }
